// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Blockquote > Blockquote component renders correctly 1`] = `
<div>
  <blockquote
    class="blockquote-component
          flat
          className-test"
  >
    <header
      class="blockquote-header"
    >
      <p
        class="blockquote-title"
      >
        Blockquote component title
      </p>
    </header>
    <div
      class="blockquote-content"
    >
      Blockquote component body
    </div>
    <footer
      class="blockquote-footer"
    >
      Blockquote component footer
    </footer>
  </blockquote>
</div>
`;

exports[`Blockquote > Blockquote component renders snapshot 1`] = `
<div>
  <blockquote
    class="blockquote-component
          flat
          className-test"
  >
    <header
      class="blockquote-header"
    >
      <p
        class="blockquote-title"
      >
        Blockquote component title
      </p>
    </header>
    <div
      class="blockquote-content"
    >
      Blockquote component body
    </div>
    <footer
      class="blockquote-footer"
    >
      Blockquote component footer
    </footer>
  </blockquote>
</div>
`;

exports[`Blockquote > Blockquote component renders with a custom class 1`] = `
<div>
  <blockquote
    class="blockquote-component
          flat
          className-test"
  >
    <header
      class="blockquote-header"
    >
      <p
        class="blockquote-title"
      >
        Blockquote component title
      </p>
    </header>
    <div
      class="blockquote-content"
    >
      Blockquote component body
    </div>
    <footer
      class="blockquote-footer"
    >
      Blockquote component footer
    </footer>
  </blockquote>
</div>
`;

exports[`Blockquote > Blockquote renders correctly 1`] = `
<div>
  <blockquote
    class="blockquote-component
          flat
          className-test"
  >
    <header
      class="blockquote-header"
    >
      <p
        class="blockquote-title"
      >
        Blockquote title
      </p>
    </header>
    <div
      class="blockquote-content"
    >
      Blockquote body
    </div>
    <footer
      class="blockquote-footer"
    >
      Blockquote footer
    </footer>
  </blockquote>
</div>
`;

exports[`Blockquote > Blockquote renders footer correctly 1`] = `
<div>
  <blockquote
    class="blockquote-component
          flat
          className-test"
  >
    <header
      class="blockquote-header"
    >
      <p
        class="blockquote-title"
      >
        Blockquote title
      </p>
    </header>
    <div
      class="blockquote-content"
    >
      Blockquote body
    </div>
    <footer
      class="blockquote-footer"
    >
      Blockquote footer
    </footer>
  </blockquote>
</div>
`;

exports[`Blockquote > Blockquote renders quote correctly 1`] = `
<div>
  <blockquote
    class="blockquote-component
          flat
          className-test"
  >
    <header
      class="blockquote-header"
    >
      <p
        class="blockquote-title"
      >
        Blockquote title
      </p>
    </header>
    <div
      class="blockquote-content"
    >
      Blockquote body
    </div>
    <footer
      class="blockquote-footer"
    >
      Blockquote footer
    </footer>
  </blockquote>
</div>
`;

exports[`Blockquote > Blockquote renders snapshot 1`] = `
<div>
  <blockquote
    class="blockquote-component
          flat
          className-test"
  >
    <header
      class="blockquote-header"
    >
      <p
        class="blockquote-title"
      >
        Blockquote title
      </p>
    </header>
    <div
      class="blockquote-content"
    >
      Blockquote body
    </div>
    <footer
      class="blockquote-footer"
    >
      Blockquote footer
    </footer>
  </blockquote>
</div>
`;

exports[`Blockquote > Blockquote renders title correctly 1`] = `
<div>
  <blockquote
    class="blockquote-component
          flat
          className-test"
  >
    <header
      class="blockquote-header"
    >
      <p
        class="blockquote-title"
      >
        Blockquote title
      </p>
    </header>
    <div
      class="blockquote-content"
    >
      Blockquote body
    </div>
    <footer
      class="blockquote-footer"
    >
      Blockquote footer
    </footer>
  </blockquote>
</div>
`;

exports[`Blockquote > Blockquote renders with a custom class 1`] = `
<div>
  <blockquote
    class="blockquote-component
          flat
          className-test"
  >
    <header
      class="blockquote-header"
    >
      <p
        class="blockquote-title"
      >
        Blockquote title
      </p>
    </header>
    <div
      class="blockquote-content"
    >
      Blockquote body
    </div>
    <footer
      class="blockquote-footer"
    >
      Blockquote footer
    </footer>
  </blockquote>
</div>
`;
